--- a/cover.html
+++ b/cover.html
@@ -19,6 +19,9 @@
             <div class="header">
                 <h1>AUDIENCE POLL RESULTS</h1>
                 <iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTL3lz0GETbedttk6KuDquVDVuZBXAHtAaL-kYGNzoPf-ZhyRLOIb5JAJomhG7TtFkt35r8gqVaBQXZ/pubchart?oid=896019592&amp;format=interactive"></iframe>
+                
+                <p></p>
+                <img src="qr.png">
                 <h2 class="byline"></h2>
             </div>
         </div>
