--- a/cover.html
+++ b/cover.html
@@ -1,10 +1,14 @@
 ﻿<!doctype html>
+
+
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
 
     <title>trial_test</title>
-
+    <script src="https://www.gstatic.com/charts/loader.js"></script>
+    <script src="https://d3js.org/d3.v5.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="style.css">
@@ -18,13 +22,20 @@
         <div id="story" class="container">
             <div class="header">
                 <h1>AUDIENCE POLL RESULTS</h1>
-                <iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTL3lz0GETbedttk6KuDquVDVuZBXAHtAaL-kYGNzoPf-ZhyRLOIb5JAJomhG7TtFkt35r8gqVaBQXZ/pubchart?oid=896019592&amp;format=interactive"></iframe>
-                
+
+
+<div id="chart-container">
+  <p>The chart will render here!</p>
+</div>
+
+
                 <h2 class="byline"></h2>
             </div>
         </div>
         <p></p>
-                <img src="qr.png">
+        <img src="qr.png">
     </div>
-</body>
+ <svg id="chart" viewBox="0 0 500 300"></svg>
+    </body>
+      <script src="./index.js"></script>
 </html>
