--- a/calc.html
+++ b/calc.html
@@ -23,9 +23,8 @@
 
         <div class="header-description">
             <div class="header-links">
-                <a href="#projects">Projects</a>
-                <a href="#exhibition">Webinars</a>
-                <a href="#about">About</a>
+
+                <a href="index.html">Back</a>
             </div>
             <div class="header-logo">
                 <img src="assets/ergon-logo.png" width="60px">
