--- a/calc.html
+++ b/calc.html
@@ -27,7 +27,7 @@
                 <a href="index.html">Back</a>
             </div>
             <div class="header-logo">
-                <img src="assets/ergon-logo.png" width="60px">
+                <img src="assets/ergon-logo.jpg" width="60px">
            
             </div>
         </div>
