--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
             <div class="para">
                 <p><span>Ever wondered about the work necessary to make Eindhoven the greenest city in the Netherlands?</span></p>
 
-                <p>You probably know that Eindhoven is one of the five major cities in the Netherlands, but did you know that it is the greenest of those five? This is due the decision of the architects <a href="https://nl.wikipedia.org/wiki/Louis_Kooken">Louis Kooken</a> and <a href="https://nl.wikipedia.org/wiki/Joseph_Cuypers">Jos Cuypers</a> (who merged the villages together into what is now Eindhoven) to make it a Garden City (tuinstadt). Since then, the municipality is making efforts to retain and develop the green even though a lot of new buildings are being built.</p>
+                <p>You probably know that Eindhoven is one of the five major cities in the Netherlands, but did you know that it is the <a target="_blank" href="https://www.eindhoven.nl/stad-en-wonen/wonen/groen/groen-in-eindhoven">greenest of those five</a>? This is due the decision of the architects <a target="_blank" href="https://nl.wikipedia.org/wiki/Louis_Kooken">Louis Kooken</a> and <a target="_blank" href="https://nl.wikipedia.org/wiki/Joseph_Cuypers">Jos Cuypers</a> (who merged the villages together into what is now Eindhoven) to make it a Garden City (tuinstadt). Since then, the municipality is making efforts to retain and develop the green even though a lot of new buildings are being built.</p>
                 <p>
                     But if designing and creating new green spaces in the city is very important, the maintenance of those green spaces is equally significant. Maintenance makes sure that the green spaces sustain in time, keep being alive and providing all sorts of services. Maintenance shapes the appearance of the green spaces and therefore shapes our (citizens’) relationship with it.
                 </p>
                 <p>
                     There are a lot of people working to maintain the city greenery and keep it as we know it, therefore we don’t really notice their work. There are a lot of companies involved in the green maintenance in the city (some are private, some public, some do only the trees, other the pavements…). It is a quite complex system that most citizens don’t really know about, and that makes it difficult, as a citizen, to feel involved in the green management of their street.
-                    <a href="https://www.ergon.nl/">Ergon</a> is one the main maintenance-providers for the city of Eindhoven. They set up this website to help citizens understand better what their green-workers do, and why. Doing that they hope to help citizens be able to involve with their local green and decide how they would like to shape it.
+                    <a target="_blank" href="https://www.ergon.nl/">Ergon</a> is one the main maintenance-providers for the city of Eindhoven. They set up this website to help citizens understand better what their green-workers do, and why. Doing that they hope to help citizens be able to involve with their local green and decide how they would like to shape it.
 
                 </p>
 
@@ -86,7 +86,7 @@
     <!--////////-->
 
     <div class="project-section" id="projects">
-        <h2>Kwaliteitscatalogus</h2>
+        <br><h2>Kwaliteitscatalogus</h2>
         <div class="project-grid">
             <!--
             <div class="image-center">
@@ -95,11 +95,11 @@
 -->
             <div class="project">
                 <div class="para">
-                    <p>The <a href="https://www.crow.nl/publicaties/kwaliteitscatalogus-openbare-ruimte-2018">Kwaliteitscatalogus</a> is the main reference for maintenance work. It is a national document that shows and tells how public space should look like, from signs to pavement... to greenery. It is a national document that municipalities are free to use (or not) to shape the maintenance of their cities. There are 5 levels of maintenance, the A+ being the more expensive and (supposely) best one and D is the wildest, cheapest one. For each situation of green in the city, there is a series of photos and a small text, describing how the green should look, according to the level (see above photo). Municipalities decide on a level of maintenance for each area, according to their budget or other considerations. They make a contract with a maintenance company that has to make sure, everything in that neighbourhood looks like the picture of level of maintenance that has been chosen.
+                    <p>The <a target="_blank" href="https://www.crow.nl/publicaties/kwaliteitscatalogus-openbare-ruimte-2018">Kwaliteitscatalogus</a> is the main reference for maintenance work. It is a national document that shows and tells how public space should look like, from signs to pavement... to greenery. It is a national document that municipalities are free to use (or not) to shape the maintenance of their cities. There are 5 levels of maintenance, the A+ being the more expensive and (supposely) best one and D is the wildest, cheapest one. For each situation of green in the city, there is a series of photos and a small text, describing how the green should look, according to the level (see above photo). Municipalities decide on a level of maintenance for each area, according to their budget or other considerations. They make a contract with a maintenance company that has to make sure, everything in that neighbourhood looks like the picture of level of maintenance that has been chosen.
                         Another company is employed to check regularly that the work is done correctly and that criterias are respected. If they find something that does not match the Kwalisteitscatalogus description, they make a photo and send it to the maintenance company, who gets a fine and has to change it within 3 days (see document on the right).</p>
                     <p>
                         This system does not give a lot of space for the green-workers to make decisions, or use their green knowledge and adapt to specific locations. Moreover, the Kwalisteitscatalogus is most of the time based on appearance and safety, it does not really take ecological systems and plant’s needs into account...and it makes nature always look the same, which is not so interesting to look at anymore. </p>
-                    <p>Therefore some green-workers are unhappy with some of the rules, and they are wondering, how do you feel about it? <a href="https://soundcloud.com/user-693576358/avant-gardeners-wies-dutch-version?in=user-693576358/sets/avant-gardeners">Here you can listen to green-workers</a> explaining three rules of the kwaliteitscatalogus that they would like to change.
+                    <p>Therefore some green-workers are unhappy with some of the rules, and they are wondering, how do you feel about it? <a target="_blank" href="https://soundcloud.com/user-693576358/avant-gardeners-wies-dutch-version?in=user-693576358/sets/avant-gardeners">Here you can listen to green-workers</a> explaining three rules of the kwaliteitscatalogus that they would like to change.
                     </p>
 
 
@@ -117,18 +117,19 @@
 
                 </div>
             </div>
-        </div>
-
-        <h2>Cost simulator</h2>
-        <div class="project" id="exhibition">
+        </div><br><br>
+        <div class="project" id="exhibition"></div>
+        <h2>Cost simulator</h2><div class="project">
+        
+        
             <div class="para">
                 <p>Here we created a costing simulator for you to think of what maintenance you would like to see in your street, and have an idea of how much work it is, and how much that will cost you.</p>
                 <p>
                     Calculator Key:
                 </p>
                 <p>Kwaliteitscatalogus Grade (A+,A,B,C,D)</p>
-                <p>Worker POV (🤔 = confused, 😀 = approving, 😩 = tedious!)</p>
-                <p>Plant Wellness (🌿 =limited, 🌿🌿 = OK, healthy = 🌿🌿🌿)</p>
+                <p>Worker point of view (🤔 = confused, 😀 = approving, 😩 = tedious!)</p>
+                <p>Plant Wellness (🌿 =limited, 🌿🌿 = OK, 🌿🌿🌿 = healthy)</p>
                 <p>Average added cost per month per citizen</p>
 
                 <p>The aim of this calculator is also to inspire anyone using it to think of new ways of valueing the greenery in your city, one that celebrates plant life rather than contains it.</p>
@@ -136,17 +137,13 @@
 
             </div>
 
-            <div class="slides" id="calc">
-
-                <!--   <img src="assets/digikatProto03.gif">-->
-
-
+            <div class="slides" id="calc">   
 
             </div>
         </div>
 
 
-
+<div class="project" id="about"></div>
 
         <h2>Ergon in your city</h2>
         <br>
@@ -184,23 +181,26 @@
         <div class="about-grid">
             <div class="para">
                 <p><span>Community poll</span></p>
-
+<p>How much do you know about the work that goes into maintaining the plant in your city?
+We've put together a little quiz to see how much you know about the work we do and to give you the chance to give us some feedback too!</p><br><br><br><br>
                 <iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSNWiTIdiN3Oky7AnRoqFOjmixHo__A7z7a2YtsczueuGEYuTGEEgpsSaO5LOcJNqTjd1y1ya4x3eWD/pubchart?oid=1831715196&amp;format=interactive"></iframe>
             </div>
 
             <div class="para">
                 <p><span>_</span></p>
+                  <br><br><br><br><br><br><br><br>              
+
                 <iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSNWiTIdiN3Oky7AnRoqFOjmixHo__A7z7a2YtsczueuGEYuTGEEgpsSaO5LOcJNqTjd1y1ya4x3eWD/pubchart?oid=2073508444&amp;format=interactive"></iframe>
             </div>
 
         </div>
         <div class="Center">
-            <p><span style="text-align: center;">Take the poll yourself <a href="https://docs.google.com/forms/d/e/1FAIpQLSdJGsdKs8TyJEU_6Uzca-AcHD8E2E0VS2dh0qDp-pXcufqujQ/viewform">here</a>! </span>
-            </p>
+            <p><span style="text-align: center;"><br>Take the poll yourself <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSdJGsdKs8TyJEU_6Uzca-AcHD8E2E0VS2dh0qDp-pXcufqujQ/viewform">here</a>! </span>
+            </p><br><br>
         </div>
     <div class="botCenter">
 
-    <text style="text-align: center;">An <a href="https://www.ergon.nl/">Ergon</a> initiative brought to life by <a href="https://cecileespinasse.eu/" >Cecile Epinasse</a> | 2020</text>
+    <text style="text-align: center;">An <a target="_blank" href="https://www.ergon.nl/">Ergon</a> initiative brought to life by <a target="_blank" href="https://cecileespinasse.eu/" >Cecile Epinasse</a> | 2020</text>
 
     </div>
     </div>
