--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
             <div class="para">
                 <p><span>Ever wondered about the work necessary to make Eindhoven the greenest city in the Netherlands?</span></p>
 
-                <p>You probably know that Eindhoven is one of the five major cities in the Netherlands, but did you know that it is the <a target="_blank" href="https://www.eindhoven.nl/stad-en-wonen/wonen/groen/groen-in-eindhoven">greenest of those five</a>? This is due the decision of the architects <a target="_blank" href="https://nl.wikipedia.org/wiki/Louis_Kooken">Louis Kooken</a> and <a target="_blank" href="https://nl.wikipedia.org/wiki/Joseph_Cuypers">Jos Cuypers</a> (who merged the villages together into what is now Eindhoven) to make it a Garden City (tuinstadt). Since then, the municipality is making efforts to retain and develop the green even though a lot of new buildings are being built.</p>
+                <p>You probably know that Eindhoven is one of the five major cities in the Netherlands, but did you know that it is the greenest of those five? This is due the decision of the architects <a target="_blank" href="https://nl.wikipedia.org/wiki/Louis_Kooken">Louis Kooken</a> and <a target="_blank" href="https://nl.wikipedia.org/wiki/Joseph_Cuypers">Jos Cuypers</a> (who merged the villages together into what is now Eindhoven) to make it a Garden City (tuinstadt). Since then, the municipality is making efforts to retain and develop the green even though a lot of new buildings are being built.</p>
                 <p>
-                    But if designing and creating new green spaces in the city is very important, the maintenance of those green spaces is equally significant. Maintenance makes sure that the green spaces sustain in time, keep being alive and providing all sorts of services. Maintenance shapes the appearance of the green spaces and therefore shapes our (citizens’) relationship with it.
+                    <a target="_blank" href="https://www.eindhoven.nl/stad-en-wonen/wonen/groen/groen-in-eindhoven">But if designing and creating new green spaces in the city is very important, the maintenance of those green spaces is equally significant.</a> Maintenance makes sure that the green spaces sustain in time, keep being alive and providing all sorts of services. Maintenance shapes the appearance of the green spaces and therefore shapes our (citizens’) relationship with it.
                 </p>
                 <p>
                     There are a lot of people working to maintain the city greenery and keep it as we know it, therefore we don’t really notice their work. There are a lot of companies involved in the green maintenance in the city (some are private, some public, some do only the trees, other the pavements…). It is a quite complex system that most citizens don’t really know about, and that makes it difficult, as a citizen, to feel involved in the green management of their street.
@@ -153,6 +153,8 @@
                 <p>Plants are an integral part of our cities and their maintenance may not have to be so formulaic. We spent some time with some of the gardeners to hear how they might do things differently.</p>
                 <p>
                     We've also collected many different stories of Eindhoven residents on how the greenery of the city has been by their side throughout their lives..
+                </p><p>
+                If you'd like your story added to this map, please write to us at <a href="mailto:info@cecileespinasse.eu">this email</a>.
                 </p>
 
 
